refactor(persistence): 简化文件读写操作
- 移除 CredentialsStore 中的 getCredentialsFile 方法
- 使用 Files.readString 替代手动字节数组转换读取文件
- 使用 Files.writeString 替代手动字节数组转换写入文件